Bug 507795 - If Haruna is set to loop, and the video is deleted; Haruna loops nothing, causing instense usage
Summary: If Haruna is set to loop, and the video is deleted; Haruna loops nothing, cau...
Status: RESOLVED FIXED
Alias: None
Product: Haruna
Classification: Applications
Component: generic (other bugs)
Version First Reported In: 1.4.0
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: george fb
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-02 22:52 UTC by Fernando M. Muniz
Modified: 2025-08-07 16:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fernando M. Muniz 2025-08-02 22:52:38 UTC
STEPS TO REPRODUCE
1. Set Haruna to loop videos.
2. Open a video.
3. Delete the video.
4. Reach the end of the video.

OBSERVED RESULT
Haruna loops nothing very intensely, and the fans starts spinning, meaning that this causes stress on the PC.

EXPECTED RESULT
Stop looping the deleted file, and not stress the PC.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.4.3
KDE Frameworks Version: 6.16.0
Qt Version: 6.9.1
Kernel Version: 6.15.8-arch1-2 (64-bit)
Graphics Platform: Wayland
Processors: 8 × 11th Gen Intel® Core™ i5-11300H @ 3.10GHz
Memory: 9 GB of RAM (8.1 GB usable)
Graphics Processor 1: NVIDIA GeForce GTX 1650
Graphics Processor 2: Intel® Iris® Xe Graphics
Manufacturer: LENOVO
Product Name: 82MG
System Version: IdeaPad Gaming 3 15IHU6

ADDITIONAL INFORMATION
Flatpak version.
Comment 1 george fb 2025-08-07 16:36:25 UTC
Git commit d90e9008ec79edfdeffdaf5c2e72a3fb72915ddb by George Florea Bănuș.
Committed on 07/08/2025 at 16:35.
Pushed by georgefb into branch 'master'.

mpvitem: check that the file exists before loading

M  +8    -0    src/mpv/mpvitem.cpp

https://invent.kde.org/multimedia/haruna/-/commit/d90e9008ec79edfdeffdaf5c2e72a3fb72915ddb