mpvitem: check that the file exists before loading

BUG: 507795